--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
       <div class="container-fluid">
         <div class="row">
           <aside class="col-lg-3 bg-light">
-            <h5 class="mt-1 text-primary">Search for a City:</h5>
+            <h5 class="mt-1 text-primary">City Search:</h5>
             <div class="form-inline form-group">
               <input class="form-control" type="text" id="search-value" />
-              <button class="btn btn-primary" id="search-button">SEARCH</button>
+              <button class="btn btn-primary mt-1 mb-5" id="search-button">SEARCH</button>
             </div>
     
             <ul class="list-group history"></ul>
@@ -35,6 +35,9 @@
           </div>
         </div>
       </div>
+
+      <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+      <script src="assets/javascript/script.js"></script>
     
 </body>
 </html>
