--- a/index.html
+++ b/index.html
@@ -9,27 +9,26 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
 
-    <title>WEATHER DASHBOARD</title>
+    <title>Weather Dashboard</title>
 
 </head>
 <body id="grad1">
-    <header class="text-center container-fluid text-light p-4">
-        <h1>Weather Dashboard</h1>
+    <header class="text-left container-fluid text-light display-4 p-4">
+        <h2>Weather Dashboard</h2>
       </header>
 
       <div class="container-fluid">
         <div class="row">
           <aside class="col-lg-3 bg-transparent">
-            <h5 class="mt-1 text-primary">City Search:</h5>
             <div class="form-inline form-group">
-              <input class="form-control" type="text" id="search-val" />
-              <button class="btn btn-primary mt-1 mb-5" id="search-btn">SEARCH</button>
+              <input class="form-control mt-3" type="text" id="search-val" />
+              <button class="btn btn-warning mt-1 mb-5 text-muted" id="search-btn">CITY SEARCH</button>
             </div>
     
             <ul class="list-group history"></ul>
           </aside>
     
-          <div class="col-lg-9">
+          <div class="text-muted col-lg-9">
             <div id="today" class="mt-3"></div>
             <div id="forecast" class="mt-3"></div>
           </div>
